# mvprmatlab

./: .hgignore  Contents.m  README.md  README.txt  README_sg.txt  mvpr_anno_imglist.m  mvpr_anno_imgpoints.m  mvpr_chkconfig.m  mvpr_colors.m  mvpr_cspace.m  mvpr_drawcircle.m  mvpr_eta.m  mvpr_feature_extract.m  mvpr_feature_extract_files.m  mvpr_feature_extract_files_new.m  mvpr_feature_extract_new.m  mvpr_feature_load_file.m  mvpr_feature_match.m  mvpr_feature_matchmatrix.m  mvpr_feature_plot.m  mvpr_feature_plot_matches.m  mvpr_from_scientific_graph_to_points.m  mvpr_getargs.m  mvpr_gridimage.m  mvpr_h2d_aff.m  mvpr_h2d_corresp.m  mvpr_h2d_corresp_dlt.m  mvpr_h2d_corresp_exaff.m  mvpr_h2d_corresp_exiso.m  mvpr_h2d_corresp_exsim.m  mvpr_h2d_corresp_isvalid.m  mvpr_h2d_corresp_multi.m  mvpr_h2d_corresp_ransac.m  mvpr_h2d_corresp_ransam.m  mvpr_h2d_demo01.m  mvpr_h2d_iso.m  mvpr_h2d_meanmodel.m  mvpr_h2d_pro.m  mvpr_h2d_sim.m  mvpr_h2d_trans.m  (+48 more)
Deprecated/: mvpr_feature_extract2.m  mvpr_feature_extract_featurespace.m  mvpr_feature_extract_surf.m  mvpr_feature_extract_vireo.m
binaries/: opencv_descriptors.sh
opencv_descriptors/: CMakeLists.txt  README  main.cc
resources/: caltech101_Faces_easy.txt.cvs
